--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,4 @@
 RewriteEngine on
-RewriteRule ^(.*)$ / [R=301,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php [L]
