--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:styles": "node-sass -rw scss -o build",
+    "watch": "sass --watch  scss:build",
     "watch:scripts": "webpack --config webpack.config.js"
   },
   "author": "Sebastian Ernst",
@@ -19,14 +19,14 @@
     "lg-pager": "^1.0.2",
     "lg-share": "^1.2.1",
     "lg-thumbnail": "^1.2.1",
-    "lg-video": "^1.3.0",
-    "lg-zoom": "^1.2.1",
-    "lightgallery": "^1.7.2",
-    "particles.js": "^2.0.0"
+    "lg-video": "^1.4.0",
+    "lg-zoom": "^1.3.0",
+    "lightgallery": "^1.10.0",
+    "swiper": "5.4.5"
   },
   "devDependencies": {
     "expose-loader": "^0.7.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
